# Achi

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  WIRTEUP.MD  WRITEUP.MD  main-con.c  main.c  main.c.sdl.bak  meson.build  mingw-w64-x86_64.cmake
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  main.yml
include/: achi_board.h  decision_tree.h  game_board.h  game_interface.h
src/: ALSD.drawio  achi_board.c  decision_tree.c  game_board.c  game_interface.c
