cmake_minimum_required(VERSION 3.30)
project(Achi C)
set(SDL_TEST OFF)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
add_subdirectory(vendor)
add_executable(Achi-SDL main.c src/decision_tree.c src/game_board.c src/game_interface.c)
add_executable(Achi-console main-con.c src/decision_tree.c src/game_board.c src/game_interface.c)
target_link_libraries(Achi-SDL PRIVATE vendor)
target_include_directories(Achi-SDL PRIVATE include)
target_include_directories(Achi-console PRIVATE include)